--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about3.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/steve.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Stephen Snyder</a></h1>
 				<span class="position">Full stack web developer &<br/>electrical engineer in Austin, Tx.</span>
 			</div>
@@ -94,7 +94,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hey there, <br/>I’m Stephen</h1>
-												<p><a href="images/Portfolio.pdf" class="btn btn-primary btn-learn" download target="_blank">Take a look at my CV<i class="icon-download4"></i></a></p>
+												<p><a href="images/Resume.pdf" class="btn btn-primary btn-learn" download target="_blank">Take a look at my CV<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
