--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Sketch</h3>
 								<div class="progress">
@@ -203,7 +203,7 @@
 								  	</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Bootstrap</h3>
@@ -281,7 +281,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Adobe Illustrator</h3>
 								<div class="progress">
@@ -291,8 +291,8 @@
 										</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						</div> -->
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Adobe Photoshop</h3>
 								<div class="progress">
@@ -302,8 +302,8 @@
 										</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						</div> -->
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Adobe InDesign</h3>
 								<div class="progress">
@@ -313,8 +313,8 @@
 										</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						</div> -->
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Adobe Premiere Pro</h3>
 								<div class="progress">
@@ -324,8 +324,8 @@
 										</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						</div> -->
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Adobe After Effects</h3>
 								<div class="progress">
@@ -335,7 +335,7 @@
 										</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
