finished up added to surge

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
 
+
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -94,7 +95,6 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hey there, <br/>I’m Stephen</h1>
-												<p><a href="images/Resume.pdf" class="btn btn-primary btn-learn" download target="_blank">Take a look at my CV<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -486,7 +486,7 @@
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 									<div id="mc_embed_signup">
-									<form action="https://marianacastro.us19.list-manage.com/subscribe/post?u=b27236179e8c8f742b45b4ed8&amp;id=27c19fa749" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+									<form action="https://stephensnyderdev.us7.list-manage.com/subscribe/post?u=dc5c575b7959548b621c10a23&amp;id=4310a746d6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 										<div id="mc_embed_signup_scroll">
 
 										<div class="form-group">
@@ -512,8 +512,6 @@
 
 										<div class="form-group clear">
 											<input type="submit" value="Send Message" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
-
-											</div>
 										</div>
 									</form>
 								</div>
