ready to launch!

--- a/index.html
+++ b/index.html
@@ -351,48 +351,48 @@
 
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/project1.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Signar</a></h3>
 										<span>Website<br/>React - Express - API</span>
 										<p class="icon">
-											<span><a href="https://github.com/marianac94/frontend-react-signar" target="_blank"><i class="icon-github"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i></a></span>
+											<span><a href="https://github.com/ssnyder555/blog-app" target="_blank"><i class="icon-github"></i></a></span>
+
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(images/project2.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Tic Tac Toe</a></h3>
-										<span>Website<br/>HTML5 - CSS3 - Javascript - jQuery</span>
+										<h3><a href="work.html"></a></h3>
+										<span>Website<br/>HTML5 - CSS3 - Javascript - NOSQL/span>
 										<p class="icon">
-											<span><a href="https://github.com/marianac94/tic-tac-toe-game" target="_blank"><i class="icon-github"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i></a></span>
+											<span><a href="https://github.com/ssnyder555/Create-a-Game" target="_blank"><i class="icon-github"></i></a></span>
+
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
+							<div class="project" style="background-image: url(images/project3.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Chef To Go</a></h3>
+										<h3><a href="work.html"></a></h3>
 										<span>Website<br/>Javascript - Node.js - Express - MongoDB</span>
 										<p class="icon">
-											<span><a href="https://github.com/marianac94/chef-2-go" target="_blank"><i class="icon-github"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i></a></span>
+											<span><a href="https://github.com/ssnyder555/Prision-AirBnB" target="_blank"><i class="icon-github"></i></a></span>
+
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
@@ -434,7 +434,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="https://github.com/ssnyder555" target="_blank" class="btn btn-primary btn-lg btn-load-more">See more <i class="icon-eye"></i></a></p>
