--- a/index.html
+++ b/index.html
@@ -546,5 +546,15 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 
+	<script type="text/javascript">
+    window._mfq = window._mfq || [];
+    (function() {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript"; mf.async = true;
+        mf.src = "//cdn.mouseflow.com/projects/45ddea1c-40ae-46ac-b383-743a988f0dd0.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+    })();
+</script>
+
 	</body>
 </html>
